Fix merge request feedback - Moved create destination button to a more visible area in modal and switched back to submit button style - Create trip button now only appears when there are two or more destinations and disappears when there is only one destination #fix

--- a/public/stylesheets/createTrips.css
+++ b/public/stylesheets/createTrips.css
@@ -117,14 +117,5 @@
 }
 
 #createDestinationButton {
-    background:none;
-    border:none;
-    margin:0;
-    padding:0;
-    cursor: pointer;
-}
-
-#createDestinationButton:hover {
-    text-decoration: underline;
-    opacity: 0.5;
+    margin-top: 10px;
 }
